--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#ED4C54</color>
     <color name="colorPrimaryDark">#99BACC</color>
     <color name="colorAccent">#E9EBEE</color>
-    <color name="colorProfile">#3B4041</color>
-    <color name="colortable">#9C9C9C</color>
+    <color name="colorProfile">#9C9C9C</color>
+    <color name="colortable">#3B4041</color>
     <color name="colortitle">#07334C</color>
 </resources>
