--- a/app/src/main/res/layout/all_carreras_layout.xml
+++ b/app/src/main/res/layout/all_carreras_layout.xml
@@ -17,7 +17,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/maraton_name"
@@ -26,8 +27,21 @@
                 android:text="Marathon Name"
                 android:textAlignment="center"
                 android:textColor="@color/colortitle"
-                android:textSize="14sp"
+                android:layout_margin="5dp"
+                android:padding="5dp"
+                android:textSize="16dp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/maraton_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:padding="5dp"
+                android:text="Pst Description.."
+                android:textAlignment="center"
+                android:textColor="@android:color/black"
+                android:textSize="14dp" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,16 +97,6 @@
                         android:textSize="12sp" />
                 </LinearLayout>
             </LinearLayout>
-
-            <TextView
-                android:id="@+id/maraton_description"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="3dp"
-                android:text="Pst Description.."
-                android:textAlignment="center"
-                android:textColor="@android:color/black"
-                android:textSize="12sp" />
         </LinearLayout>
 
 
