--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -35,8 +35,7 @@
                         android:id="@+id/titulo"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginBottom="15dp"
+                        android:layout_marginBottom="5dp"
                         android:padding="5dp"
                         android:text="Informacion de usuario"
                         android:textAlignment="center"
@@ -45,8 +44,8 @@
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/settings_profile_image"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
                         android:layout_below="@+id/titulo"
                         android:layout_marginBottom="15dp"
                         android:src="@drawable/profile" />
@@ -70,6 +69,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="5dp"
+                            android:layout_marginLeft="10dp"
                             android:text="Estado"
                             android:textAlignment="textStart"
                             android:textColor="@color/colorAccent"
@@ -86,7 +86,7 @@
                             android:id="@+id/settings_status"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="20dp"
                             android:background="@drawable/inputs"
                             android:hint="profile status"
                             android:padding="5dp"
@@ -112,6 +112,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="5dp"
+                            android:layout_marginLeft="10dp"
                             android:text="Usuario "
                             android:textAlignment="textStart"
                             android:textColor="@color/colorAccent"
@@ -128,7 +129,7 @@
                             android:id="@+id/settings_username"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="20dp"
                             android:background="@drawable/inputs"
                             android:hint="username"
                             android:padding="5dp"
@@ -154,6 +155,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:padding="5dp"
+                            android:layout_marginLeft="10dp"
                             android:text="Nombre"
                             android:textAlignment="textStart"
                             android:textColor="@color/colorAccent"
@@ -170,7 +172,7 @@
                             android:id="@+id/settings_profile_full_name"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="20dp"
                             android:background="@drawable/inputs"
                             android:hint="profile name"
                             android:padding="5dp"
@@ -197,6 +199,7 @@
                             android:layout_height="wrap_content"
                             android:padding="5dp"
                             android:text="Edad"
+                            android:layout_marginLeft="10dp"
                             android:textAlignment="textStart"
                             android:textColor="@color/colorAccent"
                             android:textSize="16dp" />
@@ -213,7 +216,7 @@
                             android:id="@+id/settings_edad"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="20dp"
                             android:background="@drawable/inputs"
                             android:hint="Edad"
                             android:padding="5dp"
@@ -239,6 +242,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:padding="5dp"
+                            android:layout_marginLeft="10dp"
                             android:text="Pais"
                             android:textAlignment="textStart"
                             android:textColor="@color/colorAccent"
@@ -256,7 +260,7 @@
                             android:id="@+id/settings_country"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="20dp"
                             android:background="@drawable/inputs"
                             android:hint="Country"
                             android:padding="5dp"
@@ -281,7 +285,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:padding="5dp"
+                            android:layout_marginLeft="10dp"
+                            android:paddingTop="5dp"
+                            android:paddingBottom="5dp"
                             android:text="Estatura(cm)"
                             android:textAlignment="textStart"
                             android:textColor="@color/colorAccent"
@@ -299,7 +305,7 @@
                             android:id="@+id/settings_estatura"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="20dp"
                             android:background="@drawable/inputs"
                             android:hint="Estatura"
                             android:padding="5dp"
@@ -326,6 +332,7 @@
                             android:layout_height="match_parent"
                             android:padding="5dp"
                             android:text="Peso (kg)"
+                            android:layout_marginLeft="10dp"
                             android:textAlignment="textStart"
                             android:textColor="@color/colorAccent"
                             android:textSize="16dp" />
@@ -341,7 +348,7 @@
                             android:id="@+id/settings_peso"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginRight="10dp"
+                            android:layout_marginRight="20dp"
                             android:background="@drawable/inputs"
                             android:hint="Peso"
                             android:padding="5dp"
