--- a/app/src/main/res/layout/all_carreras_layout.xml
+++ b/app/src/main/res/layout/all_carreras_layout.xml
@@ -28,7 +28,6 @@
                 android:textAlignment="center"
                 android:textColor="@color/colortitle"
                 android:layout_margin="5dp"
-                android:padding="5dp"
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
@@ -39,7 +38,7 @@
                 android:layout_margin="5dp"
                 android:padding="5dp"
                 android:text="Pst Description.."
-                android:textAlignment="center"
+                android:textAlignment="textStart"
                 android:textColor="@android:color/black"
                 android:textSize="14dp" />
         </LinearLayout>
